k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ams-gla
  labels:
    name: ams-gla
    environment: production
